--- a/website/clients.html
+++ b/website/clients.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 
@@ -14,6 +14,7 @@
     <tr>
         <th >Имя</th>
         <th>Фамилия</th>
+<th>Телефон</th>
 
     </tr>
     </thead>
@@ -21,5 +22,6 @@
 
     </tbody>
     <script src="js/clients.js"></script>
+</table>
 </body>
 </html>
