Implement add,delete client

--- a/website/clients.html
+++ b/website/clients.html
@@ -3,7 +3,7 @@
 <head>
 
     <title>List of clients</title>
-    <meta http-equiv="Content-Type" content="text/html"; charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html" charset="cp1251">
     <meta HTTP-EQUIV="Content-Language" CONTENT="ru">
 </head>
 <body>
@@ -12,16 +12,19 @@
 <table border=2 style="font-size: 18px;" align="center">
     <thead style="color: Purple">
     <tr>
+	 <th >Id</th>
         <th >Имя</th>
         <th>Фамилия</th>
-<th>Телефон</th>
-
+	<th>Телефон</th>
+<th>Действие</th>
     </tr>
     </thead>
     <tbody id="clientTable">
 
     </tbody>
+
     <script src="js/clients.js"></script>
 </table>
+<p style="font-size: 20px;color: Purple; font-weight: bold"  align="center"><a href="file:///C:/Users/Lenovo/Desktop/Курсач/Kursach/website/addClient.html"  >Добавить клиента</a></p>
 </body>
 </html>
