--- a/website/clients.html
+++ b/website/clients.html
@@ -5,18 +5,24 @@
     <title>List of clients</title>
     <meta http-equiv="Content-Type" content="text/html" charset="cp1251">
     <meta HTTP-EQUIV="Content-Language" CONTENT="ru">
+	<link  rel="stylesheet" href="css/btnStyle.css" type="text/css">
 </head>
 <body>
-
+<nav><button class="btnMenu" onclick=window.location="clients.html">Клиенты</button>                  <button class="btnMenu">Депозиты</button>                   <button class="btnMenu">Счета</button></nav>
 <h1  align="center" style="color: Purple"> Клиенты</h1>
 <table border=2 style="font-size: 18px;" align="center">
     <thead style="color: Purple">
     <tr>
 	 <th >Id</th>
         <th >Имя</th>
+		<th >Отчество</th>
         <th>Фамилия</th>
+		<th >Дата рождения</th>
 	<th>Телефон</th>
-<th>Действие</th>
+	<th >Адрес</th>
+	<th >Номер паспорта</th>
+<th>Удалить</th>
+
     </tr>
     </thead>
     <tbody id="clientTable">
@@ -25,6 +31,9 @@
 
     <script src="js/clients.js"></script>
 </table>
-<p style="font-size: 20px;color: Purple; font-weight: bold"  align="center"><a href="file:///C:/Users/Lenovo/Desktop/Курсач/Kursach/website/addClient.html"  >Добавить клиента</a></p>
+<p align="center"><button  class="btn" onclick="addClient()">Добавить клиента</button></p>
+<script>
+function addClient(){window.location="addClient.html";}
+</script>
 </body>
 </html>
